compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__function_call.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn main() -> i32 { foo() } fn foo() -> i32 { 1 }))"
---
Hir {
    structs: [
        Struct {
            fns: [
                FnDecl {
                    is_pub: false,
                    name: "main",
                    params: [],
                    return_ty: Some(
                        0,
                    ),
                    body: Block {
                        stmts: [],
                        returns: Some(
                            2,
                        ),
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [
                            BuiltinType(
                                I32,
                            ),
                            Name(
                                ParentRef(
                                    0,
                                ),
                            ),
                            Call {
                                callee: Expr(
                                    1,
                                ),
                                args: [],
                            },
                        ],
                        lets: [],
                        parent_captures: [
                            Local(
                                Fn(
                                    0,
                                    1,
                                ),
                            ),
                        ],
                    },
                },
                FnDecl {
                    is_pub: false,
                    name: "foo",
                    params: [],
                    return_ty: Some(
                        0,
                    ),
                    body: Block {
                        stmts: [],
                        returns: Some(
                            1,
                        ),
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [
                            BuiltinType(
                                I32,
                            ),
                            Int(
                                1,
                            ),
                        ],
                        lets: [],
                        parent_captures: [],
                    },
                },
            ],
            fields: [],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
}
