compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__one_function.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn x() -> i32 { 2 }))"
---
Hir {
    structs: [
        Struct {
            fns: [
                FnDecl {
                    is_pub: false,
                    name: "x",
                    params: [],
                    return_ty: Some(
                        0,
                    ),
                    body: Block {
                        stmts: [],
                        returns: Some(
                            1,
                        ),
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [
                            BuiltinType(
                                I32,
                            ),
                            Int(
                                2,
                            ),
                        ],
                        lets: [],
                        parent_captures: [],
                    },
                },
            ],
            fields: [],
            consts: [],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
    errors: [],
}
