compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__precedence.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn main() -> bool { 1 + 2 * 3 == 4 }))"
---
Hir {
    structs: [
        Struct {
            fns: [
                FnDecl {
                    is_pub: false,
                    name: "main",
                    params: [],
                    return_ty: Some(
                        0,
                    ),
                    body: Block {
                        stmts: [],
                        returns: Some(
                            7,
                        ),
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [
                            BuiltinType(
                                Bool,
                            ),
                            Int(
                                1,
                            ),
                            Int(
                                2,
                            ),
                            Int(
                                3,
                            ),
                            BinOp {
                                op: Mul,
                                lhs: 2,
                                rhs: 3,
                            },
                            BinOp {
                                op: Add,
                                lhs: 1,
                                rhs: 4,
                            },
                            Int(
                                4,
                            ),
                            BinOp {
                                op: Eq,
                                lhs: 5,
                                rhs: 6,
                            },
                        ],
                        lets: [],
                        parent_captures: [],
                    },
                },
            ],
            fields: [],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
}
