compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__stmt.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn x() -> i32 { let y = 4; y }))"
---
Hir {
    structs: [
        Struct {
            fns: [
                FnDecl {
                    is_pub: false,
                    name: "x",
                    params: [],
                    return_ty: Some(
                        0,
                    ),
                    body: Block {
                        stmts: [
                            Let(
                                0,
                            ),
                        ],
                        returns: Some(
                            2,
                        ),
                    },
                    ctx: Ctx {
                        params: [],
                        exprs: [
                            BuiltinType(
                                I32,
                            ),
                            Int(
                                4,
                            ),
                            Name(
                                Local(
                                    Let(
                                        0,
                                    ),
                                ),
                            ),
                        ],
                        lets: [
                            Let {
                                name: "y",
                                ty: None,
                                expr: 1,
                            },
                        ],
                        parent_captures: [],
                    },
                },
            ],
            fields: [],
            consts: [],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
    errors: [],
}
