compiler/zeque_ast/src/snapshots/zeque_ast__ast_to_hir__tests__struct_def.snap
---
source: compiler/zeque_ast/src/ast_to_hir.rs
expression: "parse(stringify!(a: struct { b: i32, },))"
---
Hir {
    structs: [
        Struct {
            fns: [],
            fields: [
                FieldDecl {
                    name: "a",
                    ty: 1,
                },
            ],
        },
        Struct {
            fns: [],
            fields: [
                FieldDecl {
                    name: "b",
                    ty: 0,
                },
            ],
        },
    ],
    files: [
        File {
            struct_idx: 0,
            ctx: Ctx {
                params: [],
                exprs: [
                    BuiltinType(
                        I32,
                    ),
                    Struct(
                        1,
                    ),
                ],
                lets: [],
                parent_captures: [],
            },
        },
    ],
    main: 0,
}
